# recall-api

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  THREAD-SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  ai.py  async_supabase.py  config.py  jwt.py  logging.py  supabase.py
app/models/: __init__.py
app/routes/: __init__.py  auth.py  items.py  search.py
app/schemas/: schemas.py
app/services/: ai_service.py  embedding_service.py  extraction_service.py
migrations/: 001_extensions.sql  002_schemas.sql  003_search_functions.sql  004_seed.sql  005_user_auto_provision.sql  006_fix_rls_policies.sql
tests/: __init__.py  conftest.py  test_schemas.py
