# dev-only deps override for local development
[project]
name = "recall-api"
version = "0.1.0"
description = "Recall API — AI-Powered Social Media Knowledge Manager"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "theone", email = "theone@example.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.8.0",
    "postgrest>=0.19.0",
    "instructor>=1.0.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sentry-sdk[fastapi]>=2.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]
prod = [
    "gunicorn>=22.0.0",
    "orjson>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]